--- a/.classpath
+++ b/.classpath
@@ -12,6 +12,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
-	<classpathentry kind="lib" path="/home/dAmihl/Uni/verteilte/dshw02/libs/json-simple-1.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="H:/Users/Martin/Documents/Uni/BACHELOR/6. Semester/Verteilte Systeme/PS/PS_02/dshw02/json-simple-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
