--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 
 jar {
 
-    archiveName = "dshw02.jar"
+    archiveName = "dshw04.jar"
 
     from {
 
@@ -58,7 +58,7 @@ task clientJar(type: Jar){
 	from(sourceSets.main.output){
 	include "client/**"
 	include "utils/**"
-
+	include "rmiutils/**"
 	}
 	
 	manifest {
@@ -91,6 +91,7 @@ task serverJar(type: Jar){
 	from(sourceSets.main.output){
 	include "server/**"
 	include "utils/**"
+	include "rmiutils/**"
 	}
 
 	 manifest {
